# drone-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
drone-app-sdk/: CMakeLists.txt
drone-app-sdk/demo/: drone_demo.cpp  flight_controller_handler_demo.cpp  gps_handler_demo.cpp  hw_monitor_demo.cpp  link_handler_demo.cpp
drone-app-sdk/include/: command_controller.hpp  drone_app_sdk.hpp  drone_controller.hpp  drone_sdk.hpp  flight_controller_handler.hpp  gps_handler.hpp  hw_monitor.hpp  icd.hpp  link_handler.hpp  state_machine_manager.hpp
drone-app-sdk/include/state_machines/: command_state_machine.hpp  flight_state_machine.hpp  safety_state_machine.hpp
drone-app-sdk/src/: command_controller.cpp  drone_app_sdk.cpp  drone_controller.cpp  drone_sdk.cpp
drone-app-sdk/src/state_machines/: command_state_machine.cpp  flight_state_machine.cpp  safety_state_machine.cpp
drone-app-sdk/tests/: drone_demo.cpp  flight_controller_handler_demo.cpp  gps_handler_demo.cpp  hw_monitor_demo.cpp  link_handler_demo.cpp
drone-app-sdk/tests/mocks/: hw_monitor_mock.hpp  mock_flight_controller_handler.hpp  mock_gps.hpp  mock_gps_handler.hpp  mock_hw_monitor.hpp  mock_link.hpp  mock_link_handler.hpp  sm_manager_mock.hpp
drone-app-sdk/tests/unit/: command_controller_test.cpp  command_sm_test.cpp  drone_controller_test.cpp  flight_sm_test.cpp  flight_state_machine_test.cpp  manager_sm_test.cpp  safety_sm_test.cpp  safety_test.cpp
hw-sdk-mock/: README.md
hw-sdk-mock/flight-controller/: CMakeLists.txt  package.xml
hw-sdk-mock/flight-controller/include/flight-controller/: flight_controller.hpp
hw-sdk-mock/flight-controller/src/: demo.cpp  flight_controller.cpp
hw-sdk-mock/gps/: CMakeLists.txt  package.xml
hw-sdk-mock/gps/include/gps/: gps.hpp
hw-sdk-mock/gps/src/: demo.cpp  gps.cpp
hw-sdk-mock/link/: CMakeLists.txt  package.xml
hw-sdk-mock/link/include/link/: link.hpp
hw-sdk-mock/link/src/: demo.cpp  link.cpp
